VP 10.6.0 Changelog
------------------------

- do not ignore primitive setting 'Has Hit Event' anymore (before it was always implicitly on)

- add display selection in the video preferences

- fix some regressions (introduced with 10.5) with backdrop lights (most prominent: bulb lights had wrong falloff, the 'classic' lights wrong image mapping)
  as a bonus, this should also finally fix all issues seen with backdrop lights on intel/builtin graphics in the past
- disable transmit for backdrop bulb lights

- add support to read out the current hit threshold if the ball hits a Primitive or a HitTarget

- implement proper sRGB pipeline for runtime filtering (only textures that are used in the 'standard' material)

- increase static table elements precomputation samples from 32 to 64 and in addition do not do aniso/trilinear filtering there, but rely on the oversampling and bilerp instead, leading to much crisper textures

- add checkbox to 'user customizations'->'overwrite physics by global set' to optionally change all flipper settings, too

- fix some regressions from VPX 10.3+ within the physics options dialog, especially with some of its flipper settings and when importing settings

- fix ball through bumper issue

- add apply button to the dimensions manager to apply the selected dimension to the active table

- add support for up to 9 custom start parameters (range 1-9). Usage: "VPinballX.exe -c1 param1 -c2 param2" sets two custom parameters "param1" and "param2".
  To access these in the script use: GetCustomParam(1) to get "param1" and GetCustomParam(2) to get "param2"

- add strength parameter for the (optional) legacy/VP9-like keyboard nudging code, can be set in the 'Keys, Nudge and DOF' preferences dialog

- add support for showing the image of a primitve mesh in the editor. However this feature is far from perfect because Windows GDI (which draws the elements in the editor) can't handle meshes well
